--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon dist/index.js"
+    "dev": "nodemon dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "ejs": "^4.0.1",
     "express": "^5.2.1",
     "nanoid": "^5.1.6",
+    "nodemon": "^3.1.11",
     "pg": "^8.17.2",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
